courses/430_programming-languages/assignment-6/tests/error/hw5_error12.correct
operator '+' requires int * int or string * string, found ( -> none) * int
